compiler/tests/fixtures/invalid/semantics/special_role_hearer_in_conditions.viv
action greet:
    roles:
        @greeter:
            as: initiator
        @target:
            as: recipient
    conditions:
        @hearer.age > 10
    effects:
        @target.greeted = true
